3.3.0 instrumented