@@ -31,14 +31,11 @@ import org.junit.rules.Timeout;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.event.Level;
-
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-
 import static org.apache.hadoop.crypto.key.kms.KMSDelegationToken.TOKEN_KIND;
-
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
 
@@ -47,92 +44,92 @@ import static org.junit.Assert.assertNull;
  */
 public class TestKMSClientProvider {
 
-  public static final Logger LOG =
-      LoggerFactory.getLogger(TestKMSClientProvider.class);
+    public static final Logger LOG = LoggerFactory.getLogger(TestKMSClientProvider.class);
 
-  private final Token token = new Token();
-  private final Token oldToken = new Token();
-  private final String urlString = "https://host:16000/kms";
-  private final String providerUriString = "kms://https@host:16000/kms";
-  private final String oldTokenService = "host:16000";
+    private final Token token = new Token();
 
-  @Rule
-  public Timeout globalTimeout = new Timeout(60000);
+    private final Token oldToken = new Token();
 
-  {
-    GenericTestUtils.setLogLevel(KMSClientProvider.LOG, Level.TRACE);
-  }
+    private final String urlString = "https://host:16000/kms";
 
-  @Before
-  public void setup() {
-    SecurityUtil.setTokenServiceUseIp(false);
-    token.setKind(TOKEN_KIND);
-    token.setService(new Text(providerUriString));
-    oldToken.setKind(TOKEN_KIND);
-    oldToken.setService(new Text(oldTokenService));
-  }
+    private final String providerUriString = "kms://https@host:16000/kms";
 
-  @Test
-  public void testSelectDelegationToken() throws Exception {
-    final Credentials creds = new Credentials();
-    creds.addToken(new Text(providerUriString), token);
-    assertNull(KMSClientProvider.selectDelegationToken(creds, null));
-    assertNull(KMSClientProvider
-        .selectDelegationToken(creds, new Text(oldTokenService)));
-    assertEquals(token, KMSClientProvider
-        .selectDelegationToken(creds, new Text(providerUriString)));
-  }
+    private final String oldTokenService = "host:16000";
 
-  @Test
-  public void testSelectTokenOldService() throws Exception {
-    final Configuration conf = new Configuration();
-    final URI uri = new URI(providerUriString);
-    final KMSClientProvider kp = new KMSClientProvider(uri, conf);
-    try {
-      final Credentials creds = new Credentials();
-      creds.addToken(new Text(oldTokenService), oldToken);
-      final Token t = kp.selectDelegationToken(creds);
-      assertEquals(oldToken, t);
-    } finally {
-      kp.close();
+    @Rule
+    public Timeout globalTimeout = new Timeout(60000);
+
+    {
+        GenericTestUtils.setLogLevel(KMSClientProvider.LOG, Level.TRACE);
     }
-  }
 
-  @Test
-  public void testSelectTokenWhenBothExist() throws Exception {
-    final Credentials creds = new Credentials();
-    final Configuration conf = new Configuration();
-    final URI uri = new URI(providerUriString);
-    final KMSClientProvider kp = new KMSClientProvider(uri, conf);
-    try {
-      creds.addToken(token.getService(), token);
-      creds.addToken(oldToken.getService(), oldToken);
-      final Token t = kp.selectDelegationToken(creds);
-      assertEquals("new token should be selected when both exist", token, t);
-    } finally {
-      kp.close();
+    @Before
+    public void setup() {
+        SecurityUtil.setTokenServiceUseIp(false);
+        token.setKind(TOKEN_KIND);
+        token.setService(new Text(providerUriString));
+        oldToken.setKind(TOKEN_KIND);
+        oldToken.setService(new Text(oldTokenService));
     }
-  }
 
-  @Test
-  public void testURLSelectTokenUriFormat() throws Exception {
-    testURLSelectToken(token);
-  }
+    @Test
+    public void testSelectDelegationToken() throws Exception {
+        final Credentials creds = new Credentials();
+        creds.addToken(new Text(providerUriString), token);
+        assertNull(KMSClientProvider.selectDelegationToken(creds, null));
+        assertNull(KMSClientProvider.selectDelegationToken(creds, new Text(oldTokenService)));
+        assertEquals(token, KMSClientProvider.selectDelegationToken(creds, new Text(providerUriString)));
+    }
 
-  @Test
-  public void testURLSelectTokenIpPort() throws Exception {
-    testURLSelectToken(oldToken);
-  }
+    @Test
+    public void testSelectTokenOldService() throws Exception {
+        final Configuration conf = new Configuration();
+        final URI uri = new URI(providerUriString);
+        final KMSClientProvider kp = new KMSClientProvider(uri, conf);
+        try {
+            final Credentials creds = new Credentials();
+            creds.addToken(new Text(oldTokenService), oldToken);
+            final Token t = kp.selectDelegationToken(creds);
+            assertEquals(oldToken, t);
+        } finally {
+            kp.close();
+        }
+    }
 
-  private void testURLSelectToken(final Token tok)
-      throws URISyntaxException, IOException {
-    final Configuration conf = new Configuration();
-    final URI uri = new URI(providerUriString);
-    final KMSClientProvider kp = new KMSClientProvider(uri, conf);
-    final DelegationTokenAuthenticatedURL url = kp.createAuthenticatedURL();
-    final Credentials creds = new Credentials();
-    creds.addToken(tok.getService(), tok);
-    final Token chosen = url.selectDelegationToken(new URL(urlString), creds);
-    assertEquals(tok, chosen);
-  }
+    @Test
+    public void testSelectTokenWhenBothExist() throws Exception {
+        final Credentials creds = new Credentials();
+        final Configuration conf = new Configuration();
+        final URI uri = new URI(providerUriString);
+        final KMSClientProvider kp = new KMSClientProvider(uri, conf);
+        try {
+            creds.addToken(token.getService(), token);
+            creds.addToken(oldToken.getService(), oldToken);
+            final Token t = kp.selectDelegationToken(creds);
+            assertEquals("new token should be selected when both exist", token, t);
+        } finally {
+            kp.close();
+        }
+    }
+
+    @Test
+    public void testURLSelectTokenUriFormat() throws Exception {
+        testURLSelectToken(token);
+    }
+
+    @Test
+    public void testURLSelectTokenIpPort() throws Exception {
+        testURLSelectToken(oldToken);
+    }
+
+    private void testURLSelectToken(final Token tok) throws URISyntaxException, IOException {
+        final Configuration conf = new Configuration();
+        final URI uri = new URI(providerUriString);
+        final KMSClientProvider kp = new KMSClientProvider(uri, conf);
+        final DelegationTokenAuthenticatedURL url = kp.createAuthenticatedURL();
+        final Credentials creds = new Credentials();
+        creds.addToken(tok.getService(), tok);
+        final Token chosen = url.selectDelegationToken(new URL(urlString), creds);
+        assertEquals(tok, chosen);
+    }
 }
